Refatora para injecao via construtor e moderniza colecoes
Substitui a injecao de dependencias por campo (@Autowired) por injecao
via construtor com dependencias finais nos resources, service e no
exception handler, seguindo a recomendacao atual do Spring. Tambem
troca Arrays.asList por List.of para as listas de erro de elemento
unico e usa o operador diamante no WebConfig.

As versoes de linguagem (Java 21), framework (Spring Boot 4.1.0) e
bibliotecas (springdoc 3.0.3, guava 33.6.0-jre) ja estavam nas ultimas
versoes disponiveis. Todos os 27 testes continuam passando.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MmfDbV9ewwRFQF42wBoG6a